syntax="proto2";
package gsp;
option java_package="com.gproject.dto.proto";
option java_outer_classname="StatusDTO";

enum StatusCode{
    idle=1;
    fight=2;
    busy=3;
}